apps/home/glance/40-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: glance-internal
  namespace: glance
spec:
  parentRefs:
    - name: main
      namespace: envoy-gateway-system
      sectionName: https-internal-white-fm
  hostnames:
    - glance.internal.white.fm
    - home.internal.white.fm
  rules:
    - backendRefs:
        - name: glance
          port: 8080
